--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
   
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/logo.png" />
@@ -41,7 +43,9 @@
 
     <!-- Pendidikan -->
     <section class="education">
-      <h3>EDUCATIONAL BACKGROUND</h3>
+      <h2>EDUCATIONAL BACKGROUND</h2>
+      <br>
+
       <div class="edu-box">
         <strong>Junior High School</strong>
         <span>SMPN 8 Makassar (2017–2020)</span>
@@ -58,33 +62,41 @@
 
     <!-- Pengalaman -->
     <section class="experience">
-      <h3>EXPERIENCE</h3>
+      <h2>EXPERIENCE</h2>
 
       <h4>Pengalaman dalam Digital Marketing & Bisnis</h4>
+
       <ul>
         <li>Brand Talent & Social Media Specialist @ecoslip_ (UMKM GO DIGITAL).</li>
         <li>Mengembangkan model bisnis inovatif dalam Lomba Business Model Canvas Smartvation by UNESA.</li>
       </ul>
 
       <h4>Kegiatan Sosial & Kepemimpinan</h4>
+  
       <ul>
         <li>Novo Club by Paragon Corp Batch 3: Bootcamp & Group Project “Generasi Bebas Stunting”.</li>
         <li>Relawan di Involuntir Makassar: Aktif dalam aksi sosial & pemberdayaan masyarakat.</li>
       </ul>
 
       <h4>Kepanitiaan</h4>
+    
       <ul>
         <li>Divisi Acara LKMMD 2024: Merancang dan menjalankan agenda kegiatan pengkaderan mahasiswa baru.</li>
       </ul>
     </section>
 
-    <!-- Sosmed -->
-    <div class="sosmed">
-      <a href="#"><img src="images/logo_linkedIn.jpg" alt="LinkedIn" /></a>
-      <a href="#"><img src="images/logo_ig.jpg" alt="Instagram" /></a>
-      <a href="#"><img src="images/logo_wa.jpg" alt="WhatsApp" /></a>
-    </div>
-  </main>
+<!-- Sosmed -->
+<div class="sosmed">
+  <a href="https://www.linkedin.com/in/dewi-astuti-929624272/" target="_blank">
+    <img src="images/logo_linkedIn.jpg" alt="LinkedIn" />
+  </a>
+  <a href="https://www.instagram.com/dewiast_m" target="_blank">
+    <img src="images/logo_ig.jpg" alt="Instagram" />
+  </a>
+  <a href="https://wa.me/6281907087886" target="_blank">
+    <img src="images/logo_wa.jpg" alt="WhatsApp" />
+  </a>
+</div>
 
   <!-- Footer -->
   <footer>
