--- a/portofolio.html
+++ b/portofolio.html
@@ -7,6 +7,8 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/logo.png" />
@@ -36,7 +38,7 @@
         <span class="circle circle-5"></span>
       </div>
       
-      <h1 class="section-title">My Portofolio</h1>
+      <h2 class="section-title">My Portofolio</h2>
 
       <div class="portfolio-columns">
         <!-- Projects -->
@@ -45,22 +47,22 @@
 
           <div class="portfolio-card">
             <img src="images/project1.png" alt="Project 1">
-            <h5>Dashboard Analitik</h5>
+            <h4>Dashboard Analitik</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/project2.jpg" alt="Project 2">
-            <h5>Digital Marketing Showcase - EcoSlip<br>(UMKM GO DIGITAL)</h5>
+            <h4>Digital Marketing Showcase - EcoSlip<br>(UMKM GO DIGITAL)</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/project3.png" alt="Project 3">
-            <h5>Weblog</h5>
+            <h4>Weblog</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/project4.png" alt="Project 4">
-            <h5>Product Card GDGOC</h5>
+            <h4>Product Card GDGOC</h4>
           </div>
         </div>    
 
@@ -70,29 +72,30 @@
 
           <div class="portfolio-card">
             <img src="images/certif1.jpg" alt="Certificate 1">
-            <h5>Generasi Bebas Stunting</h5>
+            <h4>Generasi Bebas Stunting</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/certif2.jpg" alt="Certificate 2">
-            <h5>Novo Club by Paragon Corp</h5>
+            <h4>Novo Club by Paragon Corp</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/certif3.jpg" alt="Certificate 3">
-            <h5>Lomba Ekonomi & Business Model Canvas</h5>
+            <h4>Lomba Ekonomi & Business Model Canvas</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/certif4.jpg" alt="Certificate 4">
-            <h5>Relawan Involuntir Makassar & Kelas UI/UX GDGOC UNM</h5>
+            <h4>Relawan Involuntir Makassar & Kelas UI/UX GDGOC UNM</h4>
           </div>
 
           <!-- Gallery -->
           <div class="gallery-column">
+            <br>
             <h2 class="portfolio-subtitle">Moments</h2>
             <br>
-            <p>Some pictures with Bisdig Team</p>
+            <h2>Some pictures with Bisdig Team</h2>
 <br>
             <div class="portfolio-card">
               <img src="images/galeri1.jpg" alt="Galeri 1" />
