--- a/community.html
+++ b/community.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Community - Dewi Astuti</title>
+
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
 <body>
@@ -80,6 +83,7 @@
         <div class="community-right">
           <br>
           <h2>Galeri Komunitas</h2>
+          <br>
           <div class="gallery-row">
             <img src="images/community1.jpg" alt="Involuntir Oma" />
             <img src="images/community2.jpg" alt="Involuntir Panti" />
