--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact - Dewi Astuti</title> 
+
   <link rel="stylesheet" href="css/style.css"> 
+  <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
   <link rel="icon" type="image/png" href="images/logo.png" />
 
 </head>
@@ -31,11 +35,11 @@
         </p>
       </div>
       <div class="social-icons">
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-        <a href="#"><i class="fab fa-spotify"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.linkedin.com/in/dewi-astuti-929624272"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/dewiast_m"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.t.me/@dewianbaebae"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://github.com/DewiAstuti06"><i class="fab fa-github"></i></a>
+        <a href="https://www.open.spotify.com/user/dewianbaebae"><i class="fab fa-spotify"></i></a>
       </div>
       <h3>Thank You! any messages?</h3>
       <textarea placeholder="share your feedback here..."></textarea>
