--- a/about.html
+++ b/about.html
@@ -13,111 +13,113 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
+<body>
+  <div class="wrapper">
 
-  <!-- Header -->
-  <header>
-    <img src="images/logo.png" alt="Logo Dewi" class="logo" />
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="portofolio.html">Portofolio</a></li>
-        <li><a href="community.html">Community</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Header -->
+    <header>
+      <img src="images/logo.png" alt="Logo Dewi" class="logo" />
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" class="active">About</a></li>
+          <li><a href="portofolio.html">Portofolio</a></li>
+          <li><a href="community.html">Community</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <!-- Hero Section -->
-  <main class="about-container">
-    <h2 class="welcome-text">Welcome to my pages</h2>
-    <div class="about-intro">
-      <p>
-        Halo, saya Dewi Astuti, mahasiswa program studi Bisnis Digital angkatan 2023 di Universitas Negeri Makassar.
-        Saya memiliki ketertarikan besar terhadap perkembangan teknologi di era digital.
-        Selain itu, saya juga aktif sebagai relawan dalam beberapa kegiatan sosial.
-        Di website ini, anda bisa melihat perjalanan saya. Jangan lupa untuk mengunjungi halaman Community, di mana saya berbagi 
-        pengalaman serta informasi tentang kegiatan relawan yang bisa anda ikuti, terutama di area Makassar.
-      </p>
-    </div>
-
-    <!-- Pendidikan -->
-    <section class="education">
-      <h2>EDUCATIONAL BACKGROUND</h2>
-      <br>
-
-      <div class="edu-box">
-        <strong>Junior High School</strong>
-        <span>SMPN 8 Makassar (2017–2020)</span>
+    <!-- Hero Section -->
+    <main class="about-container">
+      <h2 class="welcome-text">Welcome to my pages</h2>
+      <div class="about-intro">
+        <p>
+          Halo, saya Dewi Astuti, mahasiswa program studi Bisnis Digital angkatan 2023 di Universitas Negeri Makassar.
+          Saya memiliki ketertarikan besar terhadap perkembangan teknologi di era digital.
+          Selain itu, saya juga aktif sebagai relawan dalam beberapa kegiatan sosial.
+          Di website ini, anda bisa melihat perjalanan saya. Jangan lupa untuk mengunjungi halaman Community, di mana saya berbagi 
+          pengalaman serta informasi tentang kegiatan relawan yang bisa anda ikuti, terutama di area Makassar.
+        </p>
       </div>
-      <div class="edu-box">
-        <strong>Senior High School</strong>
-        <span>SMAN 12 Makassar (2020–2023)</span>
+
+      <!-- Pendidikan -->
+      <section class="education">
+        <h2>EDUCATIONAL BACKGROUND</h2>
+        <br>
+
+        <div class="edu-box">
+          <strong>Junior High School</strong>
+          <span>SMPN 8 Makassar (2017–2020)</span>
+        </div>
+        <div class="edu-box">
+          <strong>Senior High School</strong>
+          <span>SMAN 12 Makassar (2020–2023)</span>
+        </div>
+        <div class="edu-box">
+          <strong>University</strong>
+          <span>Universitas Negeri Makassar - Bisnis Digital (2023–now)</span>
+        </div>
+      </section>
+
+      <!-- Pengalaman -->
+      <section class="experience">
+        <h2>EXPERIENCE</h2>
+
+        <h4>Pengalaman dalam Digital Marketing & Bisnis</h4>
+        <ul>
+          <li>Brand Talent & Social Media Specialist @ecoslip_ (UMKM GO DIGITAL).</li>
+          <li>Mengembangkan model bisnis inovatif dalam Lomba Business Model Canvas Smartvation by UNESA.</li>
+        </ul>
+
+        <h4>Kegiatan Sosial & Kepemimpinan</h4>
+        <ul>
+          <li>Novo Club by Paragon Corp Batch 3: Bootcamp & Group Project “Generasi Bebas Stunting”.</li>
+          <li>Relawan di Involuntir Makassar: Aktif dalam aksi sosial & pemberdayaan masyarakat.</li>
+        </ul>
+
+        <h4>Kepanitiaan</h4>
+        <ul>
+          <li>Divisi Acara LKMMD 2024: Merancang dan menjalankan agenda kegiatan pengkaderan mahasiswa baru.</li>
+        </ul>
+      </section>
+
+      <!-- Sosmed -->
+      <div class="sosmed">
+        <a href="https://www.linkedin.com/in/dewi-astuti-929624272/" target="_blank">
+          <img src="images/logo_linkedIn.jpg" alt="LinkedIn" />
+        </a>
+        <a href="https://www.instagram.com/dewiast_m" target="_blank">
+          <img src="images/logo_ig.jpg" alt="Instagram" />
+        </a>
+        <a href="https://wa.me/6281907087886" target="_blank">
+          <img src="images/logo_wa.jpg" alt="WhatsApp" />
+        </a>
       </div>
-      <div class="edu-box">
-        <strong>University</strong>
-        <span>Universitas Negeri Makassar - Bisnis Digital (2023–now)</span>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-left">
+        <h3>Information</h3>
+        <p>+62-8190-7087-886</p>
+        <p>dewiastutimullu@gmail.com</p>
+        <p>Makassar, Sulawesi Selatan</p>
       </div>
-    </section>
 
-    <!-- Pengalaman -->
-    <section class="experience">
-      <h2>EXPERIENCE</h2>
+      <div class="footer-center">
+        <img src="images/logo.png" alt="Logo Dewi" />
+        <h5>Copyright © Dewi. All right reserved</h5>
+      </div>
 
-      <h4>Pengalaman dalam Digital Marketing & Bisnis</h4>
+      <div class="footer-right">
+        <h3>Pages</h3>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </footer>
 
-      <ul>
-        <li>Brand Talent & Social Media Specialist @ecoslip_ (UMKM GO DIGITAL).</li>
-        <li>Mengembangkan model bisnis inovatif dalam Lomba Business Model Canvas Smartvation by UNESA.</li>
-      </ul>
-
-      <h4>Kegiatan Sosial & Kepemimpinan</h4>
-  
-      <ul>
-        <li>Novo Club by Paragon Corp Batch 3: Bootcamp & Group Project “Generasi Bebas Stunting”.</li>
-        <li>Relawan di Involuntir Makassar: Aktif dalam aksi sosial & pemberdayaan masyarakat.</li>
-      </ul>
-
-      <h4>Kepanitiaan</h4>
-    
-      <ul>
-        <li>Divisi Acara LKMMD 2024: Merancang dan menjalankan agenda kegiatan pengkaderan mahasiswa baru.</li>
-      </ul>
-    </section>
-
-<!-- Sosmed -->
-<div class="sosmed">
-  <a href="https://www.linkedin.com/in/dewi-astuti-929624272/" target="_blank">
-    <img src="images/logo_linkedIn.jpg" alt="LinkedIn" />
-  </a>
-  <a href="https://www.instagram.com/dewiast_m" target="_blank">
-    <img src="images/logo_ig.jpg" alt="Instagram" />
-  </a>
-  <a href="https://wa.me/6281907087886" target="_blank">
-    <img src="images/logo_wa.jpg" alt="WhatsApp" />
-  </a>
-</div>
-
-  <!-- Footer -->
-  <footer>
-    <div class="footer-left">
-      <h3>Information</h3>
-      <p>+62-8190-7087-886</p>
-      <p>dewiastutimullu@gmail.com</p>
-      <p>Makassar, Sulawesi Selatan</p>
-    </div>
-
-    <div class="footer-center">
-      <img src="images/logo.png" alt="Logo Dewi" />
-      <h5>Copyright © Dewi. All right reserved</h5>
-    </div>
-
-    <div class="footer-right">
-      <h3>Pages</h3>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </div>
-  </footer>
+  </div> <!-- /wrapper -->
 </body>
 </html>
