--- a/portofolio.html
+++ b/portofolio.html
@@ -72,12 +72,12 @@
 
           <div class="portfolio-card">
             <img src="images/certif1.jpg" alt="Certificate 1">
-            <h4>Generasi Bebas Stunting</h4>
+            <h4>Novo Club by Paragon Corp</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/certif2.jpg" alt="Certificate 2">
-            <h4>Novo Club by Paragon Corp</h4>
+            <h4>Generasi Bebas Stunting by Indorelawan</h4>
           </div>
 
           <div class="portfolio-card">
