--- a/community.html
+++ b/community.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <!-- Header -->
+  <!- Header ->
   <header>
     <img src="images/logo.png" alt="Logo Dewi" class="logo" />
     <nav>
