--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
-
+  <!-- animated css -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
+
 <body>
   <!-- Header/Navbar -->
   <header>
@@ -35,7 +40,7 @@
     </div>
     <div class="intro-text">
       <h1>Hey There, <span>Dewi Astuti</span> <small>is here</small></h1>
-      <h2>Junior Web Developer</h2>
+      <h2 class="animate__animated animate__backInRight"> Junior Web Developer</h2>
       <p>
         I'm Dewi, an undergraduate student of Digital Business. <br>
         I have a passion for technology, beauty, and volunteer social activities.
@@ -65,6 +70,5 @@
       <a href="contact.html">Contact</a>
     </div>
   </footer>
-  
 </body>
 </html>
