--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         I'm Dewi, an undergraduate student of Digital Business. <br>
         I have a passion for technology, beauty, and volunteer social activities.
       </p>
-      <a href="about.html" class="btn">Get to know me</a>
+      <a href="about.html" class="btn animate__animated animate__bounceInDown animate__delay-1s">Get to know me</a>
     </div>
   </main>
 
