--- a/about.html
+++ b/about.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
+  <!-- animated css -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/logo.png" />
@@ -32,7 +37,7 @@
 
     <!-- Hero Section -->
     <main class="about-container">
-      <h2 class="welcome-text">Welcome to my pages</h2>
+      <h2 class="welcome-text animate__animated animate__rotateInUpLeft">Welcome to my pages</h2>
       <div class="about-intro">
         <p>
           Halo, saya Dewi Astuti, mahasiswa program studi Bisnis Digital angkatan 2023 di Universitas Negeri Makassar.
