--- a/portofolio.html
+++ b/portofolio.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
+    <!-- animated css -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/logo.png" />
@@ -43,7 +48,7 @@
       <div class="portfolio-columns">
         <!-- Projects -->
         <div class="portfolio-column">
-          <h2 class="portfolio-subtitle">Project</h2>
+          <h2 class="portfolio-subtitle animate__animated animate__fadeInLeft">Project</h2>
 
           <div class="portfolio-card">
             <img src="images/project1.png" alt="Project 1">
@@ -68,16 +73,16 @@
 
         <!-- Certificates & Gallery -->
         <div class="portfolio-column">
-          <h2 class="portfolio-subtitle">Certificate</h2>
+          <h2 class="portfolio-subtitle animate__animated animate__fadeInRight">Certificate</h2>
 
           <div class="portfolio-card">
             <img src="images/certif1.jpg" alt="Certificate 1">
-            <h4>Novo Club by Paragon Corp</h4>
+            <h4>Generasi Bebas Stunting</h4>
           </div>
 
           <div class="portfolio-card">
             <img src="images/certif2.jpg" alt="Certificate 2">
-            <h4>Generasi Bebas Stunting by Indorelawan</h4>
+            <h4>Novo Club by Paragon Corp</h4>
           </div>
 
           <div class="portfolio-card">
