--- a/community.html
+++ b/community.html
@@ -8,11 +8,17 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
+      <!-- animated css -->
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
   <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
 <body>
 
-  <!- Header ->
+  <!-- Header -->
   <header>
     <img src="images/logo.png" alt="Logo Dewi" class="logo" />
     <nav>
@@ -33,7 +39,7 @@
       <div class="community-intro animate-intro">
       <!-- Introduction -->
       <div class="community-intro">
-        <p>
+        <p class="animate__animated animate__fadeIn">
           Komunitas luar kampus adalah wadah bagi mahasiswa untuk mengembangkan diri di luar lingkungan akademik, baik dalam bentuk organisasi, komunitas sosial, hingga relawan.
           Bergabung dalam komunitas semacam ini memberikan banyak manfaat, seperti memperluas jaringan, meningkatkan keterampilan komunikasi dan kepemimpinan, serta mendapatkan pengalaman nyata yang tidak selalu diperoleh di kelas.
           Khususnya dalam kegiatan relawan, partisipasi ini bukan hanya tentang memberi, tetapi juga belajar dari berbagai perspektif, memahami isu sosial, dan berkontribusi langsung pada perubahan positif di masyarakat.
@@ -47,7 +53,7 @@
         <!-- Left Box (Community List) -->
         <div class="community-left">
           <div class="community-box">
-            <h2>Komunitas yang Anda Dapat Ikuti</h2>
+            <h2 class="animate__animated animate__fadeInLeft">Komunitas yang Anda Dapat Ikuti</h2>
             <br>
 
             <div class="volunteer-box">
@@ -82,7 +88,8 @@
         <!-- Right Box (Gallery) -->
         <div class="community-right">
           <br>
-          <h2>Galeri Komunitas</h2>
+          <h2 class="animate__animated animate__fadeInRight">Galeri Komunitas</h2>
+
           <br>
           <div class="gallery-row">
             <img src="images/community1.jpg" alt="Involuntir Oma" />
