--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+        <!-- animated css -->
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
   
   <link rel="icon" type="image/png" href="images/logo.png" />
 
@@ -41,13 +46,15 @@
         <a href="https://github.com/DewiAstuti06"><i class="fab fa-github"></i></a>
         <a href="https://www.open.spotify.com/user/dewianbaebae"><i class="fab fa-spotify"></i></a>
       </div>
-      <h3>Thank You! any messages?</h3>
+      <h3 class="animate__animated animate__headShake">
+        Thank You! any messages?
+      </h3>
       <textarea placeholder="share your feedback here..."></textarea>
     </div>
 
     <div class="contact-right">
       <div class="photo-frame">
-        <img src="images/profile2.jpg" alt="Dewi Astuti" class="profile-img" />
+        <img class="profile-img animate__animated animate__fadeIn" src="images/profile2.jpg" alt="Dewi Astuti" />
       </div>
     </div>
   </section>
