--- a/portofolio.html
+++ b/portofolio.html
@@ -134,7 +134,7 @@
     <div class="footer-right">
       <h3>Pages</h3>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="https://baedewi.blogspot.com/">Blog</a>
       <a href="contact.html">Contact</a>
     </div>
   </footer>
