--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="footer-right">
       <h3>Pages</h3>
       <a href="#home">Home</a>
-      <a href="https://baedewi.blogspot.com/">Blog</a>
+      <a href="https://baedewi.blogspot.com/" target="_blank">Blog</a>
       <a href="contact.html">Contact</a>
     </div>
   </footer>
