--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <a href="https://www.instagram.com/dewiast_m"><i class="fab fa-instagram"></i></a>
         <a href="https://www.t.me/@dewianbaebae"><i class="fab fa-telegram-plane"></i></a>
         <a href="https://github.com/DewiAstuti06"><i class="fab fa-github"></i></a>
-        <a href="https://www.open.spotify.com/user/dewianbaebae"><i class="fab fa-spotify"></i></a>
+        <a href="https://baedewi.blogspot.com/"><i class="fab fa-blogger"></i></a>
       </div>
       <h3 class="animate__animated animate__headShake">
         Thank You! any messages?
